[tool.poetry]
name = "USB_Quartermaster_common"
version = "0.1.0"
description = "Quartermaster library of common code used between client and server"
authors = ["Tim Laurence <timdaman@gmail.com>"]
packages = [
    {include = "USB_Quartermaster_common"}
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
